# the-oracle

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
rpg-systems/: cairn.yaml  (+8 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: archive_campaign.toml  create_campaign.toml  delete_api_key.toml  delete_campaign.toml  extract_character_data.toml  get_api_key.toml  get_campaign.toml  get_campaign_state.toml  get_messages.toml  get_messages_page.toml  get_rpg_system.toml  list_campaigns.toml  list_rpg_systems.toml  open_user_systems_folder.toml  patch_character_data.toml  request_gm_greeting.toml  save_api_key.toml  suggest_campaign_name.toml  synthesize_speech.toml  update_campaign_name.toml  validate_api_key.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: campaign_commands.rs  keychain_commands.rs  llm_commands.rs  mod.rs  settings_commands.rs  tts_commands.rs
src-tauri/src/domain/: campaign.rs  mod.rs  rpg_system.rs  settings.rs
src-tauri/src/keychain/: keychain_service.rs  mod.rs
src-tauri/src/persistence/: campaign_repository.rs  database.rs  mod.rs  settings_repository.rs
src-tauri/src/providers/: anthropic.rs  google_gemini.rs  llm_provider.rs  microsoft_copilot.rs  mod.rs  ollama.rs  openai.rs  opencode.rs
src-tauri/src/services/: campaign_service.rs  llm_service.rs  mod.rs  prompt_library.rs  rpg_system_registry.rs  settings_service.rs
src-tauri/src/tools/: definitions.rs  executor.rs  mod.rs
(+87 files in other folders)
