[package]
name = "the-oracle"
version = "0.1.0"
description = "The Oracle — AI-powered solo RPG desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "the_oracle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
bytes = "1"
tauri-plugin-dialog = "2"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
